force-app/main/default/objects/Hellobook__c/Hellobook__c.object-meta.xml
<CustomObject>
    <label>Hellobook</label>
    <nameField>
        <label>Hellobook Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hellobooks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>