force-app/main/default/objects/Hellobook__c/fields/Books_Details__c.field-meta.xml
<CustomField>
    <fullName>Books_Details__c</fullName>
    <label>Books Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>