force-app/main/default/objects/Hellobook__c/fields/Ratings__c.field-meta.xml
<CustomField>
    <fullName>Ratings__c</fullName>
    <label>Ratings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>*</fullName>
            </value>
            <value>
                <fullName>**</fullName>
            </value>
            <value>
                <fullName>***</fullName>
            </value>
            <value>
                <fullName>****</fullName>
            </value>
            <value>
                <fullName>*****</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>