force-app/main/default/objects/Hellobook__c/fields/reviews__c.field-meta.xml
<CustomField>
    <fullName>reviews__c</fullName>
    <label>reviews</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>